# Coinflict

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: README.md  TODO.md  main.cpp  resources.qrc
app/lib/CLI/: coinflictCLI.cpp
app/lib/assets/: colorPallet.txt
app/lib/db/: db.cpp  db.h
app/lib/db/sql/: schema.sql  seed.sql
app/lib/parser/: parser.cpp  parser.h  parserOut
app/lib/tracker/: FinancialTracker.h
